--- a/app/src/main/res/layout/fragment_picture.xml
+++ b/app/src/main/res/layout/fragment_picture.xml
@@ -87,6 +87,20 @@
                 android:layout_marginTop="10dip"
                 android:text="上传美好迹忆"/>
         </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/rl_delete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:visibility="gone">
+            <ImageView
+                android:id="@+id/iv_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="15dip"
+                android:src="@drawable/delete"/>
+        </RelativeLayout>
     </RelativeLayout>
 
 </com.uuzz.android.ui.view.ptr.PtrClassicFrameLayout>
