一些布局要求修改； 亲友账号删除和修改(修改有问题)

--- a/app/src/main/res/layout/item_growup.xml
+++ b/app/src/main/res/layout/item_growup.xml
@@ -24,6 +24,7 @@
         android:layout_marginLeft="14dip"
         android:singleLine="true"
         android:ellipsize="end"
+        android:textColor="#007e82"
         android:textSize="18dip"
         android:text="标题" />
 
