4. 健康图圈中的照片和文字能不能正常显示？目前我这边是不能，今天27日我帮你们录入了数据和图片，应该能看到 5.成长加油站图标要改一下和ios一样 实心图； 宝宝健康数据中删除 "大小便"，增加 "脐带"，有一个大小便的图标也要去掉； 6.会所介绍右上角添加“+” 7.健康数据页面大小便那项修改为脐带是否脱落；

--- a/app/src/main/res/layout/activity_breed_memory_layout.xml
+++ b/app/src/main/res/layout/activity_breed_memory_layout.xml
@@ -33,6 +33,8 @@
         android:paddingTop="10dip"
         android:gravity="center"
         android:textSize="@dimen/primary_text_size"
+        android:lines="5"
+        android:ellipsize="end"
         android:textColor="#FF4A4A4A"
         android:background="@drawable/bg_2"
         tools:text="宝宝今天第10天，黄疸基本消退，母乳喂养，妈妈精神好，食欲佳。"/>
