--- a/app/src/main/res/layout/fragment_health_data_mother.xml
+++ b/app/src/main/res/layout/fragment_health_data_mother.xml
@@ -73,6 +73,12 @@
         <TextView
             android:id="@+id/tv_mother_info"
             android:text="妈妈的睡眠良好。"
-            style="@style/health_data_state_item_data_desc" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/primary_margin"
+            android:textColor="@color/textColorPrimary"
+            android:layout_centerVertical="true"
+            android:padding="6dip"
+            android:minWidth="44dip"/>
     </RelativeLayout>
 </LinearLayout>
