--- a/app/src/main/res/layout/fragment_health_service_in_layout.xml
+++ b/app/src/main/res/layout/fragment_health_service_in_layout.xml
@@ -59,6 +59,8 @@
                 android:layout_marginLeft="30dip"
                 android:layout_marginTop="18dip"
                 android:layout_marginRight="30dip"
+                android:maxLines="3"
+                android:ellipsize="end"
                 tools:text="@string/test_health"
                 android:textSize="@dimen/primary_text_size"
                 android:textColor="@color/textColorPrimary"/>
@@ -67,6 +69,7 @@
                 android:id="@+id/im_more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingTop="5dip"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="30dip"
