--- a/app/src/main/res/layout/activity_image_viewer_layout.xml
+++ b/app/src/main/res/layout/activity_image_viewer_layout.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     android:orientation="vertical">
 
     <com.uuzz.android.ui.view.ImageViewer
@@ -32,7 +33,7 @@
     <RelativeLayout
         android:id="@+id/rl_photo_bottom"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
+        android:background="#EAFFFFFF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/primary_List_margin"
