--- a/app/src/main/res/layout/activity_search_layout.xml
+++ b/app/src/main/res/layout/activity_search_layout.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dip"
+        android:layout_height="50dip"
+        android:paddingTop="@dimen/text_space"
+        android:paddingBottom="@dimen/text_space"
         android:background="@color/colorPrimary">
 
         <com.uuzz.android.ui.view.IconTextView
@@ -17,16 +20,21 @@
             android:gravity="center"
             android:padding="@dimen/text_space"
             android:textColor="@color/white"
-            android:textSize="25dip"
+            android:textSize="23dip"
             android:text="@string/icon_search" />
 
         <EditText
             android:id="@+id/et_search"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="5dip"
             android:cursorVisible="true"
+            android:textColor="@color/white"
+            tools:text="asdasdasda"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="center_vertical"
             android:layout_toLeftOf="@+id/tv_cancel"
             android:layout_toRightOf="@+id/icv_search"
             android:background="@null" />
@@ -45,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:textSize="18dip"
+            android:textSize="16dip"
             android:padding="5dip"
             android:textColor="@color/white"
             android:text="取消" />
