首页logo图标，需再增大； 首页点击区域变大； 我的问答，提问字符修改限定为300； 分享，收藏位置需调换（与UI图不同）； 照片-个人，个人照片未上传时，首页照片默认显示系统给3张图片；

--- a/app/src/main/res/layout/activity_picture_album.xml
+++ b/app/src/main/res/layout/activity_picture_album.xml
@@ -30,5 +30,19 @@
         android:numColumns="3"
         android:verticalSpacing="10dp"
         android:layout_marginTop="28dip" />
-
+    <RelativeLayout
+        android:id="@+id/rl_delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="15dip"
+        android:visibility="gone">
+        <ImageView
+            android:id="@+id/iv_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="15dip"
+            android:src="@drawable/delete"/>
+    </RelativeLayout>
 </RelativeLayout>
