--- a/app/src/main/res/layout/item_picture_grid_album.xml
+++ b/app/src/main/res/layout/item_picture_grid_album.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
@@ -8,4 +8,18 @@
         android:scaleType="centerCrop"
         android:layout_width="100dp"
         android:layout_height="100dp" />
-</FrameLayout>
+    <ImageView
+        android:id="@+id/iv_choose"
+        android:layout_width="31dip"
+        android:layout_height="31dip"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="9dip"
+        android:background="@null"
+        android:paddingTop="3dip"
+        android:paddingRight="3dip"
+        android:paddingBottom="5dip"
+        android:paddingLeft="5dip"
+        android:visibility="gone"
+        android:src="@drawable/picture_unselected" />
+</RelativeLayout>
