--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/primary_margin"
+    android:paddingRight="@dimen/primary_margin"
+    android:paddingTop="@dimen/primary_margin"
+    android:paddingBottom="@dimen/primary_margin"
+    android:orientation="vertical"
+    tools:context=".ui.activity.TestActivity">
 
-    <com.uuzz.android.ui.view.LineChatView
-        android:id="@+id/lcv"
-        android:layout_width="match_parent"
-        android:layout_height="300dip"
-        android:paddingTop="50dip"
-        android:paddingBottom="50dp"
-        app:line_color="@color/white"
-        app:selected_point_radius="10dip"
-        app:unselected_point_radius="6dip"
-        app:unselected_point_color="#D8D8D8"
-        android:background="@color/yellow"/>
+    <TextureView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/surface_view" />
 
-</LinearLayout>
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_capture"
+        android:layout_gravity="bottom"
+        android:onClick="onCaptureClick"
+        android:text="录制"/>
+</FrameLayout>
