--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -12,7 +12,7 @@
 
     <TextureView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:id="@+id/surface_view" />
 
     <Button
@@ -20,6 +20,5 @@
         android:layout_height="wrap_content"
         android:id="@+id/button_capture"
         android:layout_gravity="bottom"
-        android:onClick="onCaptureClick"
         android:text="录制"/>
 </FrameLayout>
